--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "lodash": "^4.17.20",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
-    "react-image": "^4.0.3",
-    "react-redux": "^7.2.6",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "axios": "0.21.1",
+    "bootstrap": "4.6.0",
+    "lodash": "4.17.20",
+    "node-sass": "5.0.0",
+    "react": "17.0.1",
+    "react-bootstrap": "1.4.3",
+    "react-dom": "17.0.1",
+    "react-image": "4.0.3",
+    "react-image-gallery": "1.2.7",
+    "react-rating": "2.0.5",
+    "react-redux": "7.2.6",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
-    "react-select": "^5.2.1",
-    "redux": "^4.1.2",
-    "web-vitals": "^1.1.0"
+    "react-select": "5.2.1",
+    "web-vitals": "1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
